--- a/.gitignore
+++ b/.gitignore
@@ -116,3 +116,8 @@ dist
 .yarn/build-state.yml
 .yarn/install-state.gz
 .pnp.*
+/.idea/modules.xml
+/.idea/nestjs-course.iml
+/.idea/prettier.xml
+/.idea/vcs.xml
+/.idea/webResources.xml
