--- a/package.json
+++ b/package.json
@@ -21,7 +21,6 @@
     "test:e2e": "STAGE=dev jest --config test/jest-e2e.json"
   },
   "dependencies": {
-    "@hapi/joi": "17.1.1",
     "@nestjs/common": "8.2.2",
     "@nestjs/config": "1.1.0",
     "@nestjs/core": "8.2.2",
@@ -30,6 +29,7 @@
     "@nestjs/platform-express": "8.2.2",
     "@types/passport-jwt": "3.0.6",
     "bcrypt": "5.0.1",
+    "joi": "^17.4.2",
     "passport": "0.5.0",
     "passport-jwt": "4.0.0",
     "reflect-metadata": "0.1.13",
@@ -43,7 +43,6 @@
     "@nestjs/testing": "8.2.2",
     "@nestjs/typeorm": "8.0.2",
     "@types/express": "4.17.13",
-    "@types/hapi__joi": "17.1.7",
     "@types/jest": "27.0.3",
     "@types/node": "16.11.9",
     "@types/supertest": "2.0.11",
